--- a/01/CMakeLists.txt
+++ b/01/CMakeLists.txt
@@ -3,11 +3,11 @@ project(01)
 
 find_package( OpenCV REQUIRED )
 
-include_directories( ${OpenCV_INCLUDE_DIRS} )
+include_directories( ${OpenCV_INCLUDE_DIRS} .)
 
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(01
-        train.cpp)
+        sources/Layer.cpp sources/Layer.h sources/Dataset.cpp sources/Dataset.h sources/Network.cpp sources/Network.h sources/main.cpp)
 
 target_link_libraries( 01 ${OpenCV_LIBS} )
